# Babel

./: .gitignore  CMakeLists.txt  RUN.sh  Readme.md
.github/workflows/: c-cpp-windows.yml  c-cpp.yml
include/: Colors.hpp  Protocol.hpp  security.hpp
include/client/: Asio.hpp  Chat.hpp  Signals.hpp  TCP.hpp  UDP.hpp
include/client/protocol/: ClientUdp.hpp
include/client/sound/: Aportaudio.hpp  Sound.hpp
include/common/: User.hpp  standard.h
include/server/: Asqlite3.hpp  Logs.hpp  TcpServer.hpp  UdpServer.hpp
resources/: RFC.md  UML_DATABASE.md  UML_FULL.md  UML_TCP_CLIENT.md  UML_TCP_SERVER.md  UML_UDP_SERVER.md
src/: security.cpp
src/client/: main.cpp
src/client/GUI/: App.cpp  App.h  Call.cpp  Call.h  ContactLabel.cpp  ContactLabel.h  Login.cpp  Login.h  ModifyPopup.cpp  ModifyPopup.h  UserMenu.cpp  UserMenu.h  constants.h
src/client/signals/: signals.cpp
src/client/sound/: Codec.cpp  Eportaudio.cpp  RecorderPlayer.cpp
src/client/tcp/: TCP.cpp
src/client/udp/: ClientUdp.cpp
src/server/: main.cpp
src/server/database/: Asqlite3.cpp
src/server/proxy/: proxy.cpp
src/server/signals/: signals.cpp
src/server/tcp/: TcpServer.cpp
src/server/udp/: Group.cpp  UdpServer.cpp  UdpSession.cpp
